Add first draft of the stats page
