# yalse-core/swagger.yml
@@ -42,6 +42,22 @@ paths:
       responses:
         200:
           description: successful operation
+  /library/stats/extensions:
+    get:
+      summary: WIP
+      description: WIP
+      operationId: yalse_core.api.get_library_stats_extensions
+      responses:
+        200:
+          description: successful operation
+  /library/stats/extensions/size:
+    get:
+      summary: WIP
+      description: WIP
+      operationId: yalse_core.api.get_library_stats_extensions_size
+      responses:
+        200:
+          description: successful operation
   /library/size:
     get:
       summary: WIP
